# Twitch-SC2-Stream-Scripts

./: .gitignore  .travis.yml  LICENSE  Pipfile  README.md  TODO.md  bot.py  package-lock.json  package.json  pyproject.toml  run_configuration.py
.github/workflows/: pythonpackage.yml
betting_system/: README.md
build_order_overlay/: README.md  build_order.py  build_orders.txt  config.json
config/: bot_config.json  enabled_scripts.json  twitch_irc_token.json
match_history/: README.md
match_info/: README.md  config.json  match_info.py
overlay_files/: build_order_step.html  build_order_vote.html  match_info.html
overlay_files/css/: build_order_step.css  build_order_vote.css  match_info.css  style.css
overlay_files/js/: build_order_step.js  build_order_vote.js  match_info.js  matchinfo.js
plugin_base_class/: base_class.py
points_system/: README.md  config.json  db.json  point_system.py
scene_switcher/: README.md  config.json  scene_switcher.py
test/: build_order_overlay.test.js  build_order_step.test.js  build_order_vote.test.js  match_info_overlay.test.js  test_build_order.py  test_match_info.py
title_updater/: README.md
