[tool.poetry]
name = "twitch-sc2-stream-scripts"
version = "0.1.0"
description = ""
authors = ["BurnySc2 <gamingburny@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
websockets = "^9.1"
aiohttp = "^3.7.4.post0"
twitchio = "^1.2.2"
obs-websocket-py = "^0.5.3"
loguru = "^0.5.3"
dataclasses-json = "^0.5.2"
python-twitch-client = "^0.7.1"
win32-setctime = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-asyncio = "^0.14.0"
hypothesis = "^6.8.3"
atomicwrites = "^1.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
